Сделал расширенное меню с информацией о скинах в режиме игры с дополненной реальностью

--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -1366,6 +1366,7 @@
                         <outlet property="collectionView" destination="me5-23-Nkk" id="q9G-bu-Sdg"/>
                         <outlet property="headerTopView" destination="uZc-ag-9pn" id="aGd-Yq-uHQ"/>
                         <outlet property="userMoneyLabel" destination="czz-eG-qR0" id="SHX-O4-RhH"/>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" identifier="FromBall3DToCellMenu3D" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="VQO-GG-h9L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q9y-M9-Ozm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2031,6 +2032,7 @@
                         <outlet property="collectionView" destination="Wpp-21-mzW" id="0O4-Uf-LFf"/>
                         <outlet property="headerTopView" destination="sOM-kh-9ir" id="uPf-3r-fja"/>
                         <outlet property="userMoneyLabel" destination="4gs-q3-xNF" id="IT2-ja-IIy"/>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" identifier="FromPaddle3DToCellMenu3D" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="bmF-z4-AkC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsU-ur-t05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2134,16 +2136,17 @@
                         <outlet property="collectionView" destination="8t6-Fl-cbh" id="5hT-im-2w9"/>
                         <outlet property="headerTopView" destination="ZVE-KV-fPT" id="WMJ-hN-Dfo"/>
                         <outlet property="userMoneyLabel" destination="jmc-gd-SPA" id="wbF-qS-8g4"/>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" identifier="FromParticles3DToCellMenu3D" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="eeK-tL-DEB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y52-uc-bzG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1860" y="2541"/>
         </scene>
-        <!--Cell Menu View Controller-->
+        <!--Cell Menu View Controller3D-->
         <scene sceneID="T4C-kT-B7y">
             <objects>
-                <viewController id="hZl-iy-4Gg" customClass="CellMenuViewController" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hZl-iy-4Gg" customClass="CellMenuViewController3D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wI7-Ac-0pH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2176,67 +2179,60 @@
                                 <blurEffect style="dark"/>
                             </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="98D-8w-iNu">
-                                <rect key="frame" x="48" y="193" width="279" height="377"/>
+                                <rect key="frame" x="48" y="143" width="279" height="412"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-Y6-7cX">
-                                        <rect key="frame" x="10" y="304" width="259" height="50"/>
-                                        <color key="backgroundColor" red="0.21701800269999999" green="0.9655298591" blue="0.45262083609999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="wUO-6R-7JO"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="30"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="BUY">
-                                            <color key="titleColor" red="0.054901960780000002" green="0.0" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buyButtonPressed:" destination="hZl-iy-4Gg" eventType="touchUpInside" id="NCp-4U-C6b"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="none" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJj-gH-hJs">
-                                        <rect key="frame" x="21" y="271" width="237" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="none" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJj-gH-hJs">
+                                        <rect key="frame" x="10" y="243" width="261" height="54"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="C6Q-ay-mcy">
-                                        <rect key="frame" x="64.666666666666686" y="24" width="150" height="227"/>
+                                        <rect key="frame" x="64.666666666666686" y="24" width="150" height="211"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lgy-wS-zfS">
+                                            <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d05-Qj-Tpr">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Ss6-7k-ZU0"/>
-                                                    <constraint firstAttribute="width" secondItem="Lgy-wS-zfS" secondAttribute="height" multiplier="1:1" id="XnQ-pq-v5V"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="eeP-vp-ssE"/>
+                                                    <constraint firstAttribute="height" constant="150" id="5W8-uh-B2I"/>
+                                                    <constraint firstAttribute="width" constant="150" id="nvC-v1-ppf"/>
+                                                    <constraint firstAttribute="width" secondItem="d05-Qj-Tpr" secondAttribute="height" multiplier="1:1" id="ubt-Pw-NtZ"/>
                                                 </constraints>
-                                            </imageView>
+                                            </sceneKitView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yw-As-u20">
-                                                <rect key="frame" x="54.333333333333329" y="158" width="41.333333333333329" height="36"/>
+                                                <rect key="frame" x="54.333333333333329" y="158" width="41.333333333333329" height="20"/>
                                                 <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Effects:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wik-nn-gnh">
-                                                <rect key="frame" x="14.000000000000007" y="202" width="121.66666666666669" height="25"/>
+                                                <rect key="frame" x="14.000000000000007" y="186" width="121.66666666666669" height="25"/>
                                                 <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="25"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-Y6-7cX">
+                                        <rect key="frame" x="9" y="346" width="261" height="42"/>
+                                        <color key="backgroundColor" red="0.21701800269999999" green="0.9655298591" blue="0.45262083609999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="BUY">
+                                            <color key="titleColor" red="0.054901960780000002" green="0.0" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buyButtonPressed:" destination="hZl-iy-4Gg" eventType="touchUpInside" id="Wlz-km-bWh"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.06080023205" green="0.1112385095" blue="0.312173319" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstItem="0SR-Y6-7cX" firstAttribute="top" secondItem="aJj-gH-hJs" secondAttribute="bottom" constant="16" id="5VJ-80-WdC"/>
                                     <constraint firstItem="C6Q-ay-mcy" firstAttribute="top" secondItem="98D-8w-iNu" secondAttribute="top" constant="24" id="8eJ-U1-3Ui"/>
                                     <constraint firstItem="C6Q-ay-mcy" firstAttribute="centerX" secondItem="98D-8w-iNu" secondAttribute="centerX" id="HQd-oc-PfW"/>
-                                    <constraint firstAttribute="trailing" secondItem="aJj-gH-hJs" secondAttribute="trailing" constant="21" id="cpm-X2-Axc"/>
-                                    <constraint firstAttribute="trailing" secondItem="0SR-Y6-7cX" secondAttribute="trailing" constant="10" id="gXB-qS-EnJ"/>
-                                    <constraint firstItem="0SR-Y6-7cX" firstAttribute="centerX" secondItem="98D-8w-iNu" secondAttribute="centerX" id="ivh-UW-81z"/>
-                                    <constraint firstItem="aJj-gH-hJs" firstAttribute="top" secondItem="C6Q-ay-mcy" secondAttribute="bottom" constant="20" id="jtU-mI-zIn"/>
-                                    <constraint firstItem="0SR-Y6-7cX" firstAttribute="leading" secondItem="98D-8w-iNu" secondAttribute="leading" constant="10" id="mfy-Ve-F84"/>
-                                    <constraint firstItem="aJj-gH-hJs" firstAttribute="leading" secondItem="98D-8w-iNu" secondAttribute="leading" constant="21" id="ood-kw-sWC"/>
-                                    <constraint firstAttribute="bottom" secondItem="0SR-Y6-7cX" secondAttribute="bottom" constant="23" id="tF1-qi-nKR"/>
+                                    <constraint firstAttribute="bottom" secondItem="0SR-Y6-7cX" secondAttribute="bottom" constant="24" id="eaF-vb-Vfb"/>
+                                    <constraint firstItem="0SR-Y6-7cX" firstAttribute="leading" secondItem="98D-8w-iNu" secondAttribute="leading" constant="9" id="jxo-RZ-SJF"/>
+                                    <constraint firstAttribute="trailing" secondItem="0SR-Y6-7cX" secondAttribute="trailing" constant="9" id="oE1-sj-L2z"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -2251,18 +2247,18 @@
                             <constraint firstItem="eiu-LG-BuB" firstAttribute="trailing" secondItem="98D-8w-iNu" secondAttribute="trailing" constant="48" id="fqa-4z-iby"/>
                             <constraint firstItem="98D-8w-iNu" firstAttribute="leading" secondItem="eiu-LG-BuB" secondAttribute="leading" constant="48" id="txa-B2-BQM"/>
                             <constraint firstItem="98D-8w-iNu" firstAttribute="top" secondItem="eiu-LG-BuB" secondAttribute="top" constant="143" id="vbw-GH-30D"/>
-                            <constraint firstItem="eiu-LG-BuB" firstAttribute="bottom" secondItem="98D-8w-iNu" secondAttribute="bottom" constant="208" id="yiQ-Vi-fPF"/>
+                            <constraint firstItem="eiu-LG-BuB" firstAttribute="bottom" secondItem="98D-8w-iNu" secondAttribute="bottom" constant="257" id="yiQ-Vi-fPF"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="blurView" destination="sWf-la-m14" id="9Z0-CK-RVU"/>
-                        <outlet property="buyButton" destination="0SR-Y6-7cX" id="A1u-rv-qYk"/>
-                        <outlet property="cellInformationView" destination="98D-8w-iNu" id="kzx-dc-PMB"/>
-                        <outlet property="effectsInformationLabel" destination="aJj-gH-hJs" id="LHt-Sr-ktf"/>
-                        <outlet property="effectsLabel" destination="Wik-nn-gnh" id="ido-LB-mAt"/>
-                        <outlet property="moneyLabel" destination="ors-Th-AOU" id="Inq-41-iD9"/>
-                        <outlet property="priceLabel" destination="2yw-As-u20" id="50K-Id-ySG"/>
-                        <outlet property="skinImageView" destination="Lgy-wS-zfS" id="4ZL-wO-Xzg"/>
+                        <outlet property="blurView" destination="sWf-la-m14" id="v0H-VM-9J5"/>
+                        <outlet property="buyButton" destination="0SR-Y6-7cX" id="6qX-Ly-TXh"/>
+                        <outlet property="cellInformationView" destination="98D-8w-iNu" id="fvZ-0s-ifm"/>
+                        <outlet property="effectsInformationLabel" destination="aJj-gH-hJs" id="PMW-WB-1ji"/>
+                        <outlet property="effectsLabel" destination="Wik-nn-gnh" id="t3w-vm-Znp"/>
+                        <outlet property="moneyLabel" destination="ors-Th-AOU" id="9rz-Zd-oMZ"/>
+                        <outlet property="priceLabel" destination="2yw-As-u20" id="T31-oC-IAc"/>
+                        <outlet property="skinModelView" destination="d05-Qj-Tpr" id="zzJ-g4-gSv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qlF-fZ-51y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2271,7 +2267,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="yGa-Sh-8Tf"/>
+        <segue reference="eeK-tL-DEB"/>
+        <segue reference="zr8-MN-Mqj"/>
         <segue reference="jBZ-7G-5Mf"/>
         <segue reference="GYc-AO-Jkk"/>
     </inferredMetricsTieBreakers>
